Use more markdown
This replaces various HTML tags and uses native markdown syntax. This
also brings in more syntax highlighting.

In 3.5.5_facts_and_the_enc.md the phrasing is changed a bit. Otherwise
the numbering was off. It would have been 1. ... 1. ... instead of
1. ... 2. ....

--- a/_includes/manuals/nightly/3.3.3_debian_packages.md
+++ b/_includes/manuals/nightly/3.3.3_debian_packages.md
@@ -43,20 +43,26 @@ deb http://deb.theforeman.org/ plugins nightly
 The public key for [secure APT](https://wiki.debian.org/SecureApt) can be downloaded [here](https://deb.theforeman.org/pubkey.gpg)
 
 You can add this key with
-<pre>apt-key add pubkey.gpg</pre>
+```
+apt-key add pubkey.gpg
+```
 
 or combine downloading and registering:
-<pre>wget -q https://deb.theforeman.org/pubkey.gpg -O- | apt-key add -</pre>
+```
+wget -q https://deb.theforeman.org/pubkey.gpg -O- | apt-key add -
+```
 
 The key fingerprint is
-<pre>
+```
 AE0A F310 E2EA 96B6 B6F4 BD72 6F86 00B9 5632 78F6
 Foreman Automatic Signing Key (2016) <packages@theforeman.org>
-</pre>
+```
 
 Remember to update your package lists!
 
-<pre>apt-get update</pre>
+```
+apt-get update
+```
 
 #### Install packages
 
