--- a/_includes/manuals/nightly/3.5.1_initial_setup.md
+++ b/_includes/manuals/nightly/3.5.1_initial_setup.md
@@ -16,8 +16,10 @@ The installer can set this up for you.
 In all cases, please use the *production* settings.
 
 to initialize the database schema and content, run:
-<pre>foreman-rake db:migrate
-foreman-rake db:seed</pre>
+```
+foreman-rake db:migrate
+foreman-rake db:seed
+```
 
 For more information please see the database configuration page
 [here](manuals/{{page.version}}/index.html#3.5.3DatabaseSetup)
@@ -29,7 +31,9 @@ At this point, you might want to go through the [[FAQ]] to see how can you impor
 #### Start The Web Server
 
 if you installed via rpm, just start the foreman service, or start the builtin web server by typing:
-<pre>RAILS_ENV=production rails server</pre>
+```
+RAILS_ENV=production rails server
+```
 
 and point your browser to `http://foreman:3000`
 
