--- a/_includes/manuals/nightly/3.5.2_configuration_options.md
+++ b/_includes/manuals/nightly/3.5.2_configuration_options.md
@@ -9,41 +9,41 @@ The configuration file can also override those settings specified in the web int
 
 The first non-comment line of this file must be three dashes.
 
-<pre>
+```yaml
 ---
-</pre>
+```
 
 ##### require_ssl
 
 This boolean option configures whether Foreman insists on using only https/ssl encrypted communication channels in the web interface. This does not configure the channels used to contact the smart-proxies. Note that certain operations will still accept a http connection even if this is set, for example, the downloading of a finish script.
 
-<pre>
+```yaml
 :require_ssl: true
-</pre>
+```
 
 ##### unattended
 
 This boolean option configures whether Foreman will act as a simple node classifier for puppet, or support the full spectrum of operations required for managing a host's lifecycle. When set to _true_ then foreman will provide full host building facilities for various operating systems.
-<pre>
+```yaml
 :unattended: true
-</pre>
+```
 
 ##### support_jsonp
 
 This boolean options configures whether Foreman will provide support for the JavaScript object notation with padding. When set to _true_ then Foreman will allow to pass a callback parameter to the API calls.
 
-<pre>
+```yaml
 :support_jsonp: false
-</pre>
+```
 
 ##### logging
 
 This options contains a hash of parameters that override the current logging configuration.  It supports any of the options that are in `logging.yaml` (see below), but most usually it's used to change the log level for debugging.
 
-<pre>
+```yaml
 :logging:
   :level: debug
-</pre>
+```
 
 ##### loggers
 
@@ -59,7 +59,7 @@ Available loggers are:
 
 Uncomment or add a :loggers block to enable or disable loggers:
 
-<pre>
+```yaml
 :loggers:
   :app:
     :enabled: true
@@ -69,7 +69,7 @@ Uncomment or add a :loggers block to enable or disable loggers:
     :enabled: false
   :sql:
     :enabled: false
-</pre>
+```
 
 Some plugins may add their own loggers. See the configuration files in /etc/foreman/plugins/ which should list possibilities and enable them there.
 
