--- a/_includes/manuals/nightly/3.5.3_database_setup.md
+++ b/_includes/manuals/nightly/3.5.3_database_setup.md
@@ -3,16 +3,16 @@ Foreman is a Rails application. While Rails supports different databases, Forema
 
 The database configuration file can be found at:
 
-<pre>/etc/foreman/database.yml</pre>
+`/etc/foreman/database.yml`
 
 <div class="alert alert-info">When using PostgreSQL, you should make sure that the foreman-postgresql package is installed. See <a href="manuals/{{page.version}}/index.html#3.3InstallFromPackages">3.3 Install From Packages</a>.</div>
 
 Edit your config/database.yml and modify:
-{% highlight yaml %}
+```yaml
 production:
   adapter: postgresql
   database: foreman
   username: foreman
   password: password
   host: localhost
-{% endhighlight %}
+```
