--- a/_includes/manuals/nightly/3.5.4_puppet_reports.md
+++ b/_includes/manuals/nightly/3.5.4_puppet_reports.md
@@ -6,7 +6,9 @@ Foreman uses a custom puppet reports address (similar to tagmail or store) which
 ##### Client
 
 Ensure that the puppet clients has the following option in their puppet.conf:
-<pre>report = true</pre>
+```ini
+report = true
+```
 
 Without it, no reports will be sent.
 
@@ -22,7 +24,7 @@ First identify the directory containing report processors, e.g.
 Copy [the report processor source](https://raw.githubusercontent.com/theforeman/puppet-puppetserver_foreman/master/files/report.rb) to this report directory and name it `foreman.rb`.
 
 Create a new configuration file at `/etc/puppetlabs/puppet/foreman.yaml` (Puppet 4 AIO) or `/etc/puppet/foreman.yaml` (non-AIO) containing:
-<pre>
+```yaml
 ---
 # Update for your Foreman and Puppet server hostname(s)
 :url: "https://foreman.example.com"
@@ -36,13 +38,15 @@ Create a new configuration file at `/etc/puppetlabs/puppet/foreman.yaml` (Puppet
 :facts: true
 :timeout: 10
 :threads: null
-</pre>
+```
 
 Edit the URL field to point to your Foreman instance, and the SSL fields for the hostname of the Puppet server (which may be the same host). Paths to Puppet's SSL certificates will be under /var/lib/puppet/ssl/ when using Puppet with non-AIO.
 
 Lastly add this report processor to your Puppet server configuration.  In your server puppet.conf under the `[main]` section add:
 
-<pre>reports=log, foreman</pre>
+```ini
+reports=log, foreman
+```
 
 and restart your Puppet server.
 
@@ -65,11 +69,14 @@ Available conditions:
 * days => number of days to keep reports (defaults to 7)
 * status => status of the report (defaults to 0 --> "reports with no errors")
 
-Example:
+To expires all reports regardless of their status:
 
-1. Expires all reports regardless of their status
+```
+foreman-rake reports:expire days=7
+```
 
-    <pre>foreman-rake reports:expire days=7</pre>
-2. Expires all non interesting reports after one day
+To expire all non-interesting reports after one day:
 
-    <pre>foreman-rake reports:expire days=1 status=0</pre>
+```
+foreman-rake reports:expire days=1 status=0
+```
