--- a/_includes/manuals/nightly/3.5.5_facts_and_the_enc.md
+++ b/_includes/manuals/nightly/3.5.5_facts_and_the_enc.md
@@ -11,7 +11,7 @@ Download [the ENC script](https://raw.githubusercontent.com/theforeman/puppet-pu
 
 Unless it already exists from setting up reporting, create a new configuration file at `/etc/puppetlabs/puppet/foreman.yaml` (Puppet AIO) or `/etc/puppet/foreman.yaml` (non-AIO) containing
 
-<pre>
+```yaml
 ---
 # Update for your Foreman and Puppet server hostname(s)
 :url: "https://foreman.example.com"
@@ -25,17 +25,17 @@ Unless it already exists from setting up reporting, create a new configuration f
 :facts: true
 :timeout: 10
 :threads: null
-</pre>
+```
 
 Edit the URL field to point to your Foreman instance, and the SSL fields for the hostname of the Puppet server (which may be the same host). Paths to Puppet's SSL certificates will be under /var/lib/puppet/ssl/ and puppetdir will be under /var/lib/puppet when using Puppet with non-AIO. More information on SSL certificates is at [Securing communications with SSL](/manuals/{{page.version}}/index.html#5.4SecuringCommunicationswithSSL).
 
 Add the following lines to the [master] section of puppet.conf:
 
-<pre>
+```ini
 [master]
   external_nodes = /etc/puppetlabs/puppet/node.rb
   node_terminus  = exec
-</pre>
+```
 
 Restart the Puppet server. When the next agent checks in, the script will upload
 fact data for this host to Foreman, and download the ENC data.
@@ -53,16 +53,20 @@ No agent configuration is necessary to use this functionality.
 
 Make sure that the puppet user can execute the ENC script and it works:
 
-    sudo -u puppet /etc/puppet/node.rb [the name of a node, eg agent.local]
+```
+sudo -u puppet /etc/puppet/node.rb [the name of a node, eg agent.local]
+```
 
 should output something like:
 
-    parameters:
-      puppetmaster: puppet
-      foreman_env: &id001 production
-    classes:
-      helloworld:
-    environment: *id001
+```yaml
+parameters:
+  puppetmaster: puppet
+  foreman_env: &id001 production
+classes:
+  helloworld:
+environment: *id001
+```
 
 This output should match the information displayed when you click on the YAML button
 on the Host page in Foreman.
@@ -79,7 +83,7 @@ For further information see the [Puppet Labs docs on external nodes](https://pup
 
 Foreman passes all associated parameters, classes,and class parameters, to the Host,
 including those inherited from host groups, domains, or global settings. See section
-<a href="manuals/{{page.version}}/index.html#4.2ManagingPuppet">Managing Puppet</a> for
+[Managing Puppet](/manuals/{{page.version}}/index.html#4.2ManagingPuppet) for
 more information on assigning configuration to hosts.
 
 #### Creating hosts in Foreman with facts
@@ -113,7 +117,9 @@ all of it to Foreman.
 
 Download and configure the node.rb script as above, and then call it like this:
 
-    sudo -u puppet /etc/puppetlabs/puppet/node.rb --push-facts
+```
+sudo -u puppet /etc/puppetlabs/puppet/node.rb --push-facts
+```
 
 The following options are available for node.rb's batch mode:
 
@@ -130,16 +136,18 @@ The following options are available for node.rb's batch mode:
 Foreman's fact-upload API endpoint accepts data in pure JSON. You can push data
 to Foreman as a hash containing:
 
-    {
-      "name": "fqdn-of-host.domain.com",
-      "certname": "optional-certname-of-host.domain.com",
-      "facts": {
-        "fact1": "string",
-        "fact2": "true",
-        "fact3": "1.2.3.4",
-        ...
-      }
-    }
+```json
+{
+  "name": "fqdn-of-host.domain.com",
+  "certname": "optional-certname-of-host.domain.com",
+  "facts": {
+    "fact1": "string",
+    "fact2": "true",
+    "fact3": "1.2.3.4",
+    ...
+  }
+}
+```
 
 The 'certname' is optional but will be used to locate the Host in Foreman when
 supplied. See [the API documentation](/api/{{page.version}}/apidoc/v2/hosts/facts.html) for more details.
