--- a/_includes/manuals/nightly/4.1.4_auditing.md
+++ b/_includes/manuals/nightly/4.1.4_auditing.md
@@ -28,12 +28,15 @@ Examples:
 
 1. Expires all audits older then 90 days
 
-		<pre>foreman-rake audits:expire</pre>
+```
+foreman-rake audits:expire
+```
 
 2. Expires all audits older then 7 days
 
-		<pre>foreman-rake audits:expire days=7</pre>
-
+```
+foreman-rake audits:expire days=7
+```
 
 Note that you can also set a cronjob which will delete your audits periodically using this rake task.
 
@@ -48,7 +51,9 @@ Example:
 
 1. Anonymizes all audits older then 7 days
 
-		<pre>foreman-rake audits:anonymize days=7</pre>
+```
+foreman-rake audits:anonymize days=7
+```
 
 #### Organizations and Locations
 
