--- a/_includes/manuals/nightly/4.3.1_smartproxy_installation.md
+++ b/_includes/manuals/nightly/4.3.1_smartproxy_installation.md
@@ -15,9 +15,9 @@ RPM and Debian packages are available, see the [Install from Packages](manuals/{
 
 You can get the latest stable code from [GitHub](https://github.com/theforeman/smart-proxy) ([via git](git://github.com/theforeman/smart-proxy.git)).
 
-<pre>
+```
 git clone git://github.com/theforeman/smart-proxy.git -b {{page.version}}-stable
-</pre>
+```
 
 #### System requirements
 
@@ -48,7 +48,7 @@ The Microsoft smart-proxy installation procedure is very basic compared to the R
 1. Copy *settings.yml.example* inside *config* to *settings.yml*
 1. At very least, modify the settings for `:bind_host:` and `:log_file:` and SSL, for example:
 
-```
+```yaml
 :bind_host: '0.0.0.0'
 :log_file: 'C:\smart-proxy.log'
 
@@ -57,7 +57,6 @@ The Microsoft smart-proxy installation procedure is very basic compared to the R
 :ssl_certificate: <smart-proxy location>\ssl\host.example.com.pem
 :ssl_private_key: <smart-proxy location>\ssl\host.example.com.pem
 :ssl_ca_file:     <smart-proxy location>\ssl\ca.pem
-
 ```
 
 ##### Test and configure smart proxy features
@@ -70,7 +69,7 @@ __Caveats:__ There is an issue with DevKit not finding any ruby version installe
 
 __Puppet hint:__ If you have Puppet installed on the same host running smart-proxy, you can use Puppet's Ruby. You only need DevKit. In this case, just add directory containing `ruby.exe` to your path variable and add it to DevKit settings if necessary by editing DevKit's `config.yml`. Also, you might want to use Puppet's host certificates right away for smart proxy SSL connections. Usually, they can be found in `C:\ProgramData\PuppetLabs\puppet\etc\ssl`. For example:
 
-```
+```yaml
 :ssl_certificate: C:\ProgramData\PuppetLabs\puppet\etc\ssl\certs\host.example.com.pem
 :ssl_private_key: C:\ProgramData\PuppetLabs\puppet\etc\ssl\private_keys\host.example.com.pem
 :ssl_ca_file:     C:\ProgramData\PuppetLabs\puppet\etc\ssl\certs\ca.pem
@@ -85,15 +84,15 @@ Configuration of each subsystem is usually in /etc/foreman-proxy/settings.d/ or 
 
 #### Start the daemon
 
-<pre>
+```
 bundle exec bin/smart-proxy
-</pre>
+```
 
 Or if you installed it via a package simply start the foreman-proxy service.
 
-<pre>
+```
 service foreman-proxy start
-</pre>
+```
 
 #### Add the Smart Proxy to Foreman
 
