--- a/_includes/manuals/nightly/4.3.3_smartproxy_bmc.md
+++ b/_includes/manuals/nightly/4.3.3_smartproxy_bmc.md
@@ -1,10 +1,10 @@
 
 Activate the BMC management module within the Smart Proxy instance.  This allows users to trigger power management commands through the proxy to controlled hosts using IPMI or similar.
 
-<pre>
+```yaml
 :enabled: https
 :bmc_default_provider: freeipmi
-</pre>
+```
 
 Available providers are:
 
