--- a/_includes/manuals/nightly/4.3.4.2_isc_dhcp.md
+++ b/_includes/manuals/nightly/4.3.4.2_isc_dhcp.md
@@ -7,7 +7,7 @@ ISC implementation is based on the OMAPI interface, which means:
 
 * dhcpd configuration file:
 ensure you have the following line in your dhcpd.conf file (somewhere in the top first lines):
-<pre>omapi-port 7911;</pre>
+`omapi-port 7911;`
 * configure the settings file to point to your dhcpd.conf and dhcpd.leases files (make sure they are readable by the smart-proxy user)
 * make sure the omshell command (/usr/bin/omshell) can be executed by the smart-proxy user.
 * make sure that /etc/dhcp and /etc/dhcp/dhcpd.conf has group foreman-proxy
@@ -18,22 +18,22 @@ ensure you have the following line in your dhcpd.conf file (somewhere in the top
 The dhcpd api server will listen to any host. You might need to add a omapi_key to provide basic security.
 
 Example generating a key (on CentOS):
-<pre>
+```
 yum install bind
 dnssec-keygen -r /dev/urandom -a HMAC-MD5 -b 512 -n HOST omapi_key
 cat Komapi_key.+*.private |grep ^Key|cut -d ' ' -f2-
-</pre>
+```
 
 1. Edit your "/etc/dhcpd.conf":
 
-    <pre>
-    omapi-port 7911;
-    key omapi_key {
-    algorithm HMAC-MD5;
-    secret "XXXXXXXXX"; #<-The output from the generated key above.
-    };
-    omapi-key omapi_key;
-    </pre>
+```
+omapi-port 7911;
+key omapi_key {
+algorithm HMAC-MD5;
+  secret "XXXXXXXXX"; #<-The output from the generated key above.
+};
+omapi-key omapi_key;
+```
 
 2. Make sure you also add the omapi_key to your proxy's [dhcp_isc.yml](/manuals/{{page.version}}/index.html#4.3.4DHCP)
 
@@ -44,7 +44,7 @@ cat Komapi_key.+*.private |grep ^Key|cut -d ' ' -f2-
 The next step is to set up appropriate Subnets in Foreman from the settings menu.
 
 ##### Sample dhcpd.conf
-<pre>
+```
 ddns-update-style interim;
 ignore client-updates;
 authoritative;
@@ -74,4 +74,4 @@ subnet 10.1.1.0 netmask 255.255.255.0 {
   max-lease-time 43200;
 
 }
-</pre>
+```
