--- a/_includes/manuals/nightly/4.3.6_smartproxy_puppet.md
+++ b/_includes/manuals/nightly/4.3.6_smartproxy_puppet.md
@@ -32,7 +32,7 @@ To get a list of environments, classes and their parameters, the proxy queries t
 
 The Puppetserver has to permit these API queries. The [HOCON-formatted auth.conf style](https://docs.puppet.com/puppetserver/latest/config_file_auth.html) is at /etc/puppetlabs/puppetserver/conf.d/auth.conf and requires these rules:
 
-<pre>
+```hocon
 {
     match-request: {
         path: "/puppet/v3/environments"
@@ -53,4 +53,4 @@ The Puppetserver has to permit these API queries. The [HOCON-formatted auth.conf
     sort-order: 500
     name: "puppetlabs environment classes"
 },
-</pre>
+```
