--- a/_includes/manuals/nightly/4.3.9_smartproxy_tftp.md
+++ b/_includes/manuals/nightly/4.3.9_smartproxy_tftp.md
@@ -4,11 +4,11 @@
 Activate the TFTP management module within the Smart Proxy instance.  This is designed to manage files on a TFTP server, e.g. bootloaders for OS installation and PXE menu files.
 
 The *tftproot* value is directory into which TFTP files are copied and then served from. The TFTP daemon will also be expected to chroot to this location. This component is only supported in a Unix environment.
-<pre>
+```yaml
 :enabled: https
 :tftproot: /var/lib/tftpboot
 :tftp_servername: name of your tftp server (used for next server value in your dhcp reservation) - defaults to the host name of your proxy.
-</pre>
+```
 
 <div class="alert alert-info">The foreman-proxy user must have read/write access to the _tftpboot/pxelinux.cfg_ and _tftpboot/boot_ directories.</div>
 
