--- a/_includes/manuals/nightly/4.3.10_smartproxy_ssl.md
+++ b/_includes/manuals/nightly/4.3.10_smartproxy_ssl.md
@@ -9,17 +9,17 @@ If the smart proxy host is not managed by Puppet, you will need to generate a ce
 
 When using Puppet's certificates, the following lines will be required in puppet.conf to relax permissions to the `puppet` group.  The `foreman` and/or `foreman-proxy` users should then be added to the `puppet` group.
 
-<pre>
+```ini
 [main]
 privatekeydir = $ssldir/private_keys { group = service }
 hostprivkey = $privatekeydir/$certname.pem { mode = 640 }
-</pre>
+```
 
 ##### Configuring the proxy
 
 Configure the locations to the SSL files in `/etc/foreman-proxy/settings.yml`, plus the list of trusted Foreman hosts:
 
-<pre>
+```yaml
 :ssl_certificate: /etc/puppetlabs/puppet/ssl/certs/FQDN.pem
 :ssl_ca_file: /etc/puppetlabs/puppet/ssl/certs/ca.pem
 :ssl_private_key: /etc/puppetlabs/puppet/ssl/private_keys/FQDN.pem
@@ -27,7 +27,7 @@ Configure the locations to the SSL files in `/etc/foreman-proxy/settings.yml`, p
 :trusted_hosts:
 - foreman.corp.com
 #- foreman.dev.domain
-</pre>
+```
 
 ##### SSL cipher suites
 
@@ -46,9 +46,9 @@ Please note, the smart proxy uses the OpenSSL suite naming scheme. For more info
 
 Certain users may require to disable certain cipher suites due to security policies or newly discovered weaknesses. This can be done by using the `:ssl_disabled_ciphers:` option in `/etc/foreman-proxy/settings.yml`.  For example:
 
-<pre>
+```yaml
 :ssl_disabled_ciphers: ['AES128-SHA','AES256-SHA']
-</pre>
+```
 
 ##### Generating a certificate
 
