--- a/_includes/manuals/nightly/4.3.2_smartproxy_settings.md
+++ b/_includes/manuals/nightly/4.3.2_smartproxy_settings.md
@@ -6,16 +6,18 @@ Each of the modules used in the Smart Proxy have their configuration in the */et
 
 The first non-comment line of all configuration files must be three dashes.
 
-<pre>---</pre>
+```yaml
+---
+```
 
 #### Daemon configuration (settings.yml)
 
 If daemon is present and true then the Smart Proxy will attempt to disconnect itself from the controlling terminal and daemonize itself on startup, writing its pid (process ID) into the specified file.
 
-<pre>
+```yaml
 :daemon: true
 :daemon_pid: /var/run/foreman-proxy/foreman-proxy.pid
-</pre>
+```
 
 #### Logging (settings.yml)
 
@@ -30,10 +32,10 @@ The proxy's output is captured to the **log_file** and may be filtered via the u
 
 See Ruby's [Logger class](http://www.ruby-doc.org/stdlib/libdoc/logger/rdoc/classes/Logger.html) for details.
 
-<pre>
+```yaml
 :log_file: /var/log/foreman-proxy/proxy.log
 :log_level: DEBUG
-</pre>
+```
 
 The log_file setting may be set to "STDOUT" which causes log messages to be logged to standard output, for capture by the running process (e.g. systemd with journal).  When log_file is set to "SYSLOG", all messages will be sent to syslog.
 
@@ -41,21 +43,21 @@ A limited number of recent log messages are kept in memory using a ring buffer, 
 
 The number of all log messages is controlled by the `log_buffer` setting, and a second buffer of error messages is controlled by the `log_buffer_errors` setting.  The total of the two will directly affect the maximum amount of memory used, which is approximately 500kB in the default configuration of 3,000 recent messages.
 
-<pre>
+```yaml
 :log_buffer: 2000
 :log_buffer_errors: 1000
-</pre>
+```
 
 #### Listening configuration (settings.yaml)
 
 By default the Smart Proxy listens on all interfaces, which can be changed to limit access to a network:
 
-<pre>
+```yaml
 # host to bind ports to (possible values: *, localhost, 0.0.0.0)
 :bind_host: ['*']
 :bind_host: private.example.com
 :bind_host: 192.168.1.10
-</pre>
+```
 
 On EL7, the default value for `bind_host` is `::`. Keep in mind that if IPv6 has been disabled at the kernel level, you will need to change it to `*` manually.
 
@@ -63,10 +65,10 @@ The Smart Proxy has a number of different modules which can be enabled either fo
 
 The two port options control which TCP port(s) the Smart Proxy will listen on.  At least one must be enabled for the proxy to start.  It is recommended to only set https_port unless an HTTP-only module is active, which also requires the three ssl_* settings to be set.
 
-<pre>
+```yaml
 :http_port: 8000
 :https_port: 8443
-</pre>
+```
 
 <div class="alert alert-info">Be careful when enabling http_port, ensure settings.d/ files are enabled only on HTTPS or trusted_hosts is set appropriately so modules are not exposed without security on HTTP.</div>
 
@@ -84,11 +86,11 @@ The existence of all the three ssl key entries below requires the use of an SSL 
 **NOTE** that both client certificates need to be signed by the same CA, which must be in the *ssl_ca_file*, in order for this to work
 see [**SSL**](manuals/{{page.version}}/index.html#4.3.10SSL) for more information
 
-<pre>
+```yaml
 :ssl_certificate: ssl/certs/fqdn.pem
 :ssl_ca_file: ssl/certs/ca.pem
 :ssl_private_key: ssl/private_keys/fqdn.key
-</pre>
+```
 
 Specific SSL cipher suites can be disabled by using the `:ssl_disabled_ciphers:` option. For more information on which cipher suites are enabled by default and how to correctly disable specific ones, please see [**SSL cipher suites**](manuals/{{page.version}}/index.html#ssl-cipher-suites).
 
@@ -96,11 +98,11 @@ The TLS versions can be disabled if requiring a specific version. So while insec
 
 This is the list of hosts from which the smart proxy will accept connections.  For HTTPS connections, the name must match the common name (CN) within the subject DN and for HTTP connections, it must match the hostname from reverse DNS.
 
-<pre>
+```yaml
 :trusted_hosts:
   - foreman.prod.domain
   - foreman.dev.domain
-</pre>
+```
 
 For HTTPS connections, the name must match the common name (CN) within the subject DN and for HTTP connections, it must match the hostname from reverse DNS.  When `:forward_verify` is enabled (default: true) then the reverse lookup is verified against the forward lookup of the hostname (aka forward-confirmed reverse DNS/FCrDNS).
 
