--- a/_includes/manuals/nightly/4.3.8_smartproxy_realm.md
+++ b/_includes/manuals/nightly/4.3.8_smartproxy_realm.md
@@ -1,10 +1,10 @@
 
 Activate the realm management module within the Smart Proxy instance.  This manages Kerberos realms or domains, allowing Foreman to add and remove hosts to enable them to join the realm/domain automatically during provisioning.
 
-<pre>
+```yaml
 :enabled: https
 :use_provider: realm_freeipa
-</pre>
+```
 
 Builtin providers are:
 
@@ -14,8 +14,8 @@ The configuration for each provider should be in its respective file, i.e: `/etc
 
 The following settings control authentication of the proxy to the realm for management of hosts.
 In `realm_freeipa.yml`:
-<pre>
+```yaml
 # Authentication for Kerberos-based Realms
 :keytab_path: /etc/foreman-proxy/freeipa.keytab
 :principal: realm-proxy@EXAMPLE.COM
-</pre>
+```
