--- a/_includes/manuals/nightly/5.4.2_comms_proxy.md
+++ b/_includes/manuals/nightly/5.4.2_comms_proxy.md
@@ -7,7 +7,7 @@ In a simple setup, a single Puppet Certificate Authority (CA) can be used for au
 
 `/etc/foreman-proxy/settings.yml` contains the locations to the SSL certificates and keys:
 
-<pre>
+```yaml
 ---
 # SSL Setup
 
@@ -17,20 +17,19 @@ In a simple setup, a single Puppet Certificate Authority (CA) can be used for au
 :ssl_certificate: /etc/puppetlabs/puppet/ssl/certs/FQDN.pem
 :ssl_ca_file: /etc/puppetlabs/puppet/ssl/certs/ca.pem
 :ssl_private_key: /etc/puppetlabs/puppet/ssl/private_keys/FQDN.pem
-</pre>
+```
 
 In this example, the proxy is sharing Puppet's certificates, but it could equally use its own.
 
 In addition it contains a list of hosts that connections will be accepted from, which should be the host(s) running Foreman:
 
-<pre>
+```yaml
 # the hosts which the proxy accepts connections from
 # commenting the following lines would mean every verified SSL connection allowed
 :trusted_hosts:
 - foreman.corp.com
 #- foreman.dev.domain
-</pre>
-
+```
 
 ##### Configuring Foreman
 
@@ -45,10 +44,10 @@ Lastly, when adding the smart proxy in Foreman, ensure the URL begins with `http
 
 If using Puppet's certificates, the following lines will be required in puppet.conf to relax permissions to the `puppet` group.  The `foreman` and/or `foreman-proxy` users should then be added to the `puppet` group.
 
-<pre>
+```ini
 [main]
 privatekeydir = $ssldir/private_keys { group = service }
 hostprivkey = $privatekeydir/$certname.pem { mode = 640 }
-</pre>
+```
 
 Note that the "service" keyword will be interpreted by Puppet as the "puppet" service group.
